--- a/biological_sequence_analysis_1998.ipynb
+++ b/biological_sequence_analysis_1998.ipynb
@@ -17,12 +17,12 @@
    "source": [
     "## Chapter 1\n",
     "\n",
-    "#### Basic rules in using probabilities"
+    "#### Basic sults in using probabilities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,8 +37,6 @@
     }
    ],
    "source": [
-    "# Basic results in using probabilities\n",
-    "\n",
     "## model: a system that simulates the object under consideration\n",
     "## probabilistic model: a model that produces different outcomes with different probabilities\n",
     "\n",
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +96,7 @@
     "\n",
     "seq_probs = [nucs[n] for n in seq]\n",
     "\n",
-    "# function implementation\n",
+    "# simple implementation\n",
     "from typing import List, Optional\n",
     "\n",
     "def product(l: List[float]) -> float:\n",
@@ -134,13 +132,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "probability of A: 0.246%\n",
+      "probability of C: 0.251%\n",
+      "probability of G: 0.258%\n",
+      "probability of T: 0.245%\n"
+     ]
+    }
+   ],
+   "source": [
+    "## maximum likelihood estimation: the optimal way to fit a distribution to your data\n",
+    "\n",
+    "# For sequence analysis, the probability of each character based on historical frequencies\n",
+    "#     is the maximum likelihood. Although, this does assume a large amount of historical data.\n",
+    "#     With a limited amount of data maximum likelihood estimation tends to overfit\n",
+    "import random\n",
+    "\n",
+    "def random_base():\n",
+    "    return random.choice('ATCG')\n",
+    "\n",
+    "# As an example we will randomly sample a few thousand bases and then use those frequencies to\n",
+    "#     determine the probability of each nucleotide character (they should each be close to 25%)\n",
+    "data = {'A': 0, 'C': 0, 'G': 0, 'T': 0}\n",
+    "total = 2000\n",
+    "for i in range(total):\n",
+    "    data[random_base()] += 1\n",
+    "\n",
+    "print(f'probability of A: {data[\"A\"] / total:.3}%')\n",
+    "print(f'probability of C: {data[\"C\"] / total:.3}%')\n",
+    "print(f'probability of G: {data[\"G\"] / total:.3}%')\n",
+    "print(f'probability of T: {data[\"T\"] / total:.3}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Maximum likelihood estimation\n",
+    "# Conditional, join, and marginal probabilities\n",
     "# TODO"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
